fix: 친구 목록이 없을 때 생성해서 반환 시 ArrayList로 반환하도록 수정